{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 185,
  "lineage": "a137c309-ff23-6645-70e6-244732e2abbf",
  "resources": [
    {
      "module": "module.aurora",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aurora_sg",
      "provider": "module.aurora.provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:131578276461:security-group/sg-0c7befa2357520b0e",
            "description": "Control traffic to/from RDS Aurora",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c7befa2357520b0e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "From allowed SGs",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 5432
              }
            ],
            "name": "aurora-sg",
            "name_prefix": "",
            "owner_id": "131578276461",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aurora-db"
            },
            "tags_all": {
              "Name": "aurora-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf2f390c74f05f12"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aurora",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aurora_sg_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1307136946",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c7befa2357520b0e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aurora.aws_security_group.aurora_sg"
          ]
        }
      ]
    },
    {
      "module": "module.aurora",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aurora_sg_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "From allowed SGs",
            "from_port": 5432,
            "id": "sgrule-4011484547",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c7befa2357520b0e",
            "self": true,
            "source_security_group_id": "sg-0c7befa2357520b0e",
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aurora.aws_security_group.aurora_sg"
          ]
        }
      ]
    }
  ]
}